# mental-health-signals

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_preds_local.sh  setup.py
.github/workflows/: ci.yml
configs/: data.yaml  distilroberta_lora.yaml  distilroberta_lora_concern.yaml  distilroberta_lr.yaml  pipeline.yaml  roberta_lr.yaml
data/raw/final/: mh_signal_data_w-concern-intent.csv
data/splits/: test.csv  test_gold.jsonl  train.csv  val.csv
docs/: single_post_output_example.json
frontend/: app.js  index.html  styles.css
mhsignals/: __init__.py  config.py  data.py  pipeline.py
mhsignals/classifiers/: __init__.py  base.py  concern.py  intent.py
mhsignals/evaluation/: __init__.py  metrics.py
mhsignals/generator/: __init__.py  generate.py  prompt.py  safety.py
mhsignals/retriever/: __init__.py  builder.py  filters.py  search.py
models/: distilroberta_lora.py  distilroberta_lora_concern.py
scripts/: add_synthetic_data.py  after_concern_training.sh  api.py  build_kb.py  compare_classifier_metrics.py  concern_levels_3tier.py  create_splits.py  data_audit.py  evaluate.py  evaluate_classifiers.py  fix_data.py  generate.py  kb_build.py  kb_encode_index.py  kb_search.py  llm_tagging.py  make_preds_from_gold.py  merge_labels.py  quick_test_output.py  rag_generate.py  run_sample_rag.py  tag_rules_assign.py  tag_summary.py  train.py  validate_reply_quality.py
tests/: conftest.py  test_config.py  test_data.py  test_evaluation.py  test_filters.py  test_pipeline.py  test_prompt.py  test_safety.py
(+29 files in other folders)
