[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mhsignals"
version = "1.0.0"
description = "Mental Health Signal Detection and Response Generation"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "numpy>=1.26,<3",
    "tqdm>=4.60",
    "transformers>=4.40",
    "torch>=2.0",
    "sentence-transformers>=3.0",
    "peft>=0.8",
    "evaluate>=0.4",
    "faiss-cpu>=1.7.2",
    "pillow>=10.0",
    "sentencepiece>=0.2",
    "huggingface_hub>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["mhsignals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that load ML models (skip with -m 'not slow')",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
